mise à jour loading spinner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Ohmyfood</title>
 </head>
 <body>
-    <!-- <div class="t404">
+    <div class="t404">
 
         <div class="loading-spinner">
             <div class="load">
@@ -23,7 +23,7 @@
                 <div class="load__circle load__circle--color2"></div>
                 <div class="load__circle load__circle--color3"></div>
             </div>
-        </div> -->
+        </div>
 
         <header class="header">
             
