--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width", initial-scale=1.0, user-scalable=yes>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/4f0e0f6e83.js" crossorigin="anonymous"></script>
     <title>Ohmyfood</title>
