--- a/menu-2.html
+++ b/menu-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width", initial-scale=1.0, user-scalable=yes>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <script src="https://kit.fontawesome.com/4f0e0f6e83.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/styles.css">
     <title>Ohmyfood Menu 2</title>
@@ -16,7 +16,7 @@
 
         <a class="header__link" href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
 
-        <img src="css\images\ohmyfood.png" alt="logo" class="header__logo"/>
+        <img src="css/images/ohmyfood.png" alt="logo" class="header__logo"/>
 
     </header>
     
@@ -26,7 +26,7 @@
         <div class="intro">
 
             <div class="intro__restau-pic">
-                <img src="css\images\la note enchantée.jpg" alt="photo restaurant"/>
+                <img src="css/images/lanoteenchantée.jpg" alt="photo restaurant"/>
             </div>
 
             <div class="intro__restau-name">
@@ -237,7 +237,7 @@
 
     <footer class="footer">
         
-        <img src="css\images\ohmyfood.png" alt="logo" class="footer__logo"/>
+        <img src="css/images/ohmyfood.png" alt="logo" class="footer__logo"/>
 
         <div class="footer-link">
             <i class="footer-link__icons fa-solid fa-utensils"></i>
