--- a/menu-2.html
+++ b/menu-2.html
@@ -43,7 +43,7 @@
 
             <h2 class="type-of-meal__title">entrées</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
                     
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Ravioles de foie gras </h2>
@@ -58,9 +58,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>  
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Caviar osciètre</h2>
@@ -75,9 +75,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Homard et espuma de potiron</h2>
@@ -92,9 +92,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Foie gras de canard cuit entier</h2>
@@ -109,7 +109,7 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
@@ -117,7 +117,7 @@
 
             <h2 class="type-of-meal__title">plats</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Noix de coquilles Saint-Jacques</h2>
@@ -132,11 +132,11 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
-                    <div class="btn-menu-body" name="button" type="button">
+                    <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Langoustine poêlée</h2>
                         <p class="btn-menu-body__descr">Purée de patate douce</p>
                     </div>
@@ -149,9 +149,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Mijoté de queue de boeuf</h2>
@@ -166,7 +166,7 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
@@ -174,7 +174,7 @@
 
             <h2 class="type-of-meal__title">desserts</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Macaron noisette et chocolat</h2>
@@ -189,9 +189,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Baba au rhum revisité</h2>
@@ -206,9 +206,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Tarte au citron meringuée </h2>
@@ -223,17 +223,17 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
     </section>
 
-    <section class="command">
+    <div class="command">
 
         <button class="btn-purple" name="button" type="button">Commander</button>
 
-    </section>
+    </div>
 
     <footer class="footer">
         
