--- a/menu-3.html
+++ b/menu-3.html
@@ -44,7 +44,7 @@
 
             <h2 class="type-of-meal__title">entrées</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
                     
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Tartare de poulpe acidulé</h2>
@@ -59,9 +59,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>  
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Velouté de légumes d'antan</h2>
@@ -76,9 +76,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Soupe à l'oignon</h2>
@@ -93,7 +93,7 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
@@ -101,7 +101,7 @@
 
             <h2 class="type-of-meal__title">plats</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Coquilles Saint-Jacques</h2>
@@ -116,11 +116,11 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
-                    <div class="btn-menu-body" name="button" type="button">
+                    <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Magret de canard</h2>
                         <p class="btn-menu-body__descr">Et parmentier de pommes de terre</p>
                     </div>
@@ -133,9 +133,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Pigeonneau d’Ille-et-Vilaine</h2>
@@ -150,7 +150,7 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
@@ -158,7 +158,7 @@
 
             <h2 class="type-of-meal__title">desserts</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Pétales de violettes glacés</h2>
@@ -173,9 +173,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Fondant au chocolat</h2>
@@ -190,9 +190,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Millefeuille croustillant</h2>
@@ -207,17 +207,17 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
     </section>
 
-    <section class="command">
+    <div class="command">
 
         <button class="btn-purple" name="button" type="button">Commander</button>
 
-    </section>
+    </div>
 
     <footer class="footer">
         
