--- a/menu-4.html
+++ b/menu-4.html
@@ -43,7 +43,7 @@
 
             <h2 class="type-of-meal__title">entrées</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
                     
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Tartare de thon</h2>
@@ -58,9 +58,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>  
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Bouchée de homard croustillant </h2>
@@ -75,9 +75,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Velouté de cèpes</h2>
@@ -92,7 +92,7 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
@@ -100,7 +100,7 @@
 
             <h2 class="type-of-meal__title">plats</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Poulet rôti aux herbes de Provence</h2>
@@ -115,11 +115,11 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
-                    <div class="btn-menu-body" name="button" type="button">
+                    <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Langouste rôtie</h2>
                         <p class="btn-menu-body__descr">Et ses légumes de saison</p>
                     </div>
@@ -132,9 +132,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Côte de boeuf Angus</h2>
@@ -149,7 +149,7 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
@@ -157,7 +157,7 @@
 
             <h2 class="type-of-meal__title">desserts</h2>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Farandole de desserts</h2>
@@ -172,9 +172,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Crème brulée</h2>
@@ -189,9 +189,9 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
-                <button class="btn-menu" name="button" type="button">
+                <div class="btn-menu">
 
                     <div class="btn-menu-body">
                         <h2 class="btn-menu-body__title">Tiramisu</h2>
@@ -206,17 +206,17 @@
                         <i class="btn-menu-check__icon fa-solid fa-circle-check"></i>
                     </div>
 
-                </button>
+                </div>
 
         </div>
 
     </section>
 
-    <section class="command">
+    <div class="command">
 
         <button class="btn-purple" name="button" type="button">Commander</button>
 
-    </section>
+    </div>
 
     <footer class="footer">
         
